--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Buscador CA Web</title>
   <link rel="icon" href="{{ url_for('static', filename='favi4.ico') }}" type="image/x-icon">
 
@@ -10,11 +11,12 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Buscador CA Web</a>
+      <a class="navbar-brand" href="/individual">Buscador CA Web</a>
       <div class="navbar-nav">
-        <a class="nav-link" href="/">Busca Individual</a>
+        <a class="nav-link" href="/individual">Busca Individual</a>
         <a class="nav-link" href="/lote">Verificação em Lote</a>
         <a class="nav-link" href="/ca">Buscar por Data</a>
+        <a class="nav-link" href="/">Sair</a>
       </div>
     </div>
   </nav>
@@ -24,7 +26,8 @@
   </main>
 
   <footer class="text-center mt-5 mb-3 text-muted">
-    <small>© 2025 Buscador CA Web</small>
+    <small>© Buscador CA Web</small> <br>
+    <small style="font-size: 10px;">Por: <a href="https://www.linkedin.com/in/fernando-eduardo-61b99924b/" target="_blank">Fernando Eduardo</a></small>
   </footer>
   <script src="{{ url_for('static', filename='main.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
