--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-adsense-account" content="ca-pub-6545206274840019">
   <title>Buscador CA Web</title>
   <link rel="icon" href="{{ url_for('static', filename='favi4.ico') }}" type="image/x-icon">
 
