--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   <footer class="text-center mt-5 mb-3 text-muted">
     <small>© Buscador CA Web</small> <br>
     <small style="font-size: 10px;">Por: <a href="https://www.linkedin.com/in/fernando-eduardo-61b99924b/" target="_blank">Fernando Eduardo</a></small> <br>
-    <a class="navbar-brand" id="status-servidor">Status Servidor: Verificando... </a>
+    <a class="navbar-brand" id="status-servidor">Status Servidor: online </a>
   </footer>
   <script src="{{ url_for('static', filename='main.js') }}"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
