--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,9 @@
       <a class="navbar-brand" href="/individual">Buscador CA Web</a>
       <div class="navbar-nav">
         <a class="nav-link" href="/individual">Busca Individual</a>
-        <a class="nav-link" href="/lote">Verificação em Lote</a>
+        <a class="nav-link" href="/lote">Busca em Lote</a>
         <a class="nav-link" href="/ca">Buscar por Data</a>
+        <a class="nav-link" href="/remetente">Busca por remetente</a>
         <a class="nav-link" href="/">Sair</a>
       </div>
     </div>
