--- a/templates/lote.html
+++ b/templates/lote.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-  <h2>Verificação em Lote</h2>
+  <h2>Busca em Lote</h2>
   <form method="POST" class="my-4">
     <div class="mb-3">
       <label for="codigos" class="form-label">Cole os códigos (um por linha)</label>
